# rsoxs

./: .coveragerc  .flake8  .gitattributes  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  old_setup.cfg  old_setup.py  pyproject.toml  requirements.txt  setup.py  terminal history.txt
docs/source/: conf.py  index.rst  installation.rst  usage.rst
examples/: rsoxs_example_queue.csv
rsoxs/: _version.py  redis_config.py  run_engine.py  startup.py
rsoxs/Base/: detectors.py  syringepump.py
rsoxs/Functions/: NEXAFSscans.py  PVdictionary.py  acquisitions.py  alignment.py  alignment_local.py  common_functions.py  common_procedures.py  configurations.py  contingencies.py  energyscancore.py  energyscans.py  fly_alignment.py  flystream_wrapper.py  magics.py  per_steps.py  rsoxs_plans.py  rsoxs_queue_plans.py  sample_spreadsheets.py  schemas.py  slack.py  spreadsheets.py
rsoxs/HW/: cameras.py  contingencies.py  detectors.py  energy.py  lakeshore.py  manipulator.py  motors.py  signals.py  slackbot.py  slits.py  syringepump.py
rsoxs/alignment/: bar_image_processing.py  energy_calibration.py  fiducials.py  fly_alignment.py  sample_imager.py  spiral_scans.py  spirals.py  spirals_analysis.py
rsoxs/alignment2/: spiral_scans.py
rsoxs/configurationSetup/: configurationLoadSave.py
rsoxs/configuration_setup/: configurationLoadSave.py  configuration_load_save.py  configuration_load_save_sanitize.py  configurations_instrument.py
rsoxs/devices/: cameras.py  detectors.py  manipulator.py  syringepump.py  waxs.py
rsoxs/dryrun/: spreadsheets2.py
(+11 files in other folders)
